deployment/deploy-api.yml
apiVersion: v1
kind: Service
metadata:
  name: deceuvel-api-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: deceuvel-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deceuvel-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deceuvel-api
  template:
    metadata:
      labels:
        app: deceuvel-api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: deceuvel-api-container
        image: deceuvel-api:%CONTAINER_TAG%
        imagePullPolicy: Never
        ports:
        - containerPort: 80
