deployment/deploy-db.yml
apiVersion: v1
kind: Service
metadata:
    name: mongo-svc
    labels:
        app: mongo-db
spec:
    clusterIP: None
    ports:
    - port: 27017
      targetPort: 27017
    selector:
        app: mongo-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo
spec:
    serviceName: mongo-svc
    replicas: 1
    selector:
        matchLabels:
            app: mongo-db
    template:
        metadata:
            labels:
                app: mongo-db
        spec:
            containers:
            - name: mongo-container
              image: mongo:4.0.3
              ports:
              - containerPort: 27017
#                name: mongo-port
              volumeMounts:
              - name: data
                mountPath: /data/db
              - name: init-script
                mountPath: /docker-entrypoint-initdb.d/mongo-init.sh
                subPath: mongo-init.sh
                readOnly: true
            volumes:
                - name: init-script
                  configMap:
                    name: mongo-init-script
    volumeClaimTemplates: # TODO: nao foi configurado ainda
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
            requests:
                storage: 1Gi
